Resolve the text jumping issue and text updated

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,7 @@ body{
     margin-top: 30px;
     font-size: 38px;
     font-weight: 400;
+    height: 150px;
 }
 
 .text{
